welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:3: error: type mismatch;
 found   : Unit
 required: Boolean
  if (t="R") {droite();avance(); t=litMessage()}
       ^BDRBuggle:4: error: type mismatch;
 found   : Unit
 required: Boolean
	if (t="L") {gauche(); avance();t=litMessage()}
             ^BDRBuggle:5: error: type mismatch;
 found   : Unit
 required: Boolean
	if (t="I") {retourne();avance();t=litMessage()}
             ^BDRBuggle:6: error: type mismatch;
 found   : Unit
 required: Boolean
	if (t="A") {avance();t=litMessage()}
             ^BDRBuggle:7: error: type mismatch;
 found   : Unit
 required: Boolean
	if (t="B") {avance(2);t=litMessage()}
             ^BDRBuggle:8: error: type mismatch;
 found   : Unit
 required: Boolean
  if (t="C") {avance(3);t=litMessage()}
       ^BDRBuggle:9: error: type mismatch;
 found   : Unit
 required: Boolean
	if (t="Z") {recule();t=litMessage()}
             ^BDRBuggle:10: error: type mismatch;
 found   : Unit
 required: Boolean
	if (t="Y") {recule(2);t=litMessage()}
             ^BDRBuggle:11: error: type mismatch;
 found   : Unit
 required: Boolean
 if (t="X") {recule(3);t=litMessage()}
      ^